// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ball > when checked > should have aria-checked=true 1`] = `
<button
  aria-checked="true"
  class="svelte-Ball"
  role="switch"
>
  <div
    class="svelte-Ball"
  >
    <!---->
  </div>
</button>
`;

exports[`Ball > when not checked > should have aria-checked=false 1`] = `
<button
  aria-checked="false"
  class="svelte-Ball"
  role="switch"
>
  <div
    class="svelte-Ball"
  >
    <!---->
  </div>
</button>
`;
